alignment issue with design of the anime list resolved

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
 
 .list-container{
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
   text-align: center;
